# diffy

./: .gitignore  GITBUTLER_TAKEAWAYS.md  README.md  agents.md  ideas.md  index.html  inspiration.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  watcher.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/git/: diff.rs  graph.rs  merge.rs  mod.rs  repository.rs
src-tauri/tests/: git_integration.rs
src-tauri/tests/snapshots/: git_integration__diff__working_diff_deleted_files.snap  git_integration__diff__working_diff_staged_files.snap  git_integration__diff__working_diff_unstaged_files.snap  git_integration__diff_metadata__binary_staged_files.snap  git_integration__diff_metadata__copy_staged_files.snap  git_integration__diff_metadata__rename_staged_files.snap  git_integration__repository__repository_info_snapshot.snap  git_integration__status__status_mixed_snapshot.snap
src/components/ai-elements/: file-tree.tsx
src/components/layout/: DockviewHeaderActions.tsx  DockviewLayout.tsx  DockviewPanelWrapper.tsx  DockviewTab.tsx  Panel.tsx  PanelGroup.tsx  index.ts
src/components/ui/: BranchSwitcher.tsx  Button.tsx  CommandPalette.tsx  CommitContextMenu.tsx  ErrorBoundary.tsx  FileContextMenu.tsx  HelpOverlay.tsx  (+16 more)
src/hooks/: useKeyboardNavigation.ts  useRepoWatcher.ts
src/lib/: errors.ts  file-tree.ts  layouts.ts  perf.ts  recent-repos.ts  tauri.ts  themes.ts
src/stores/: git-store.ts  merge-conflict-store.ts  tabs-store.ts  ui-store.ts  undo-store.ts
src/types/: git.ts  pierre-diffs.d.ts  skills.ts
(+101 files in other folders)
