[package]
name = "diffy"
version = "0.1.0"
description = "A modern Git GUI application"
authors = ["you"]
edition = "2021"

[lib]
name = "diffy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify-debouncer-mini = { version = "0.5", default-features = false, features = ["macos_fsevent"] }

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["redactions"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
